syntax = "proto3";

package helloworld.test;

option java_outer_classname = "TestProto";

import "google/protobuf/duration.proto";

message TestRequest {
    string message = 1;
    int32 number = 2;
}

message TestResponse {
    string message = 1;
    google.protobuf.Duration duration = 2;
}

service TestService {
    rpc TestMethod (TestRequest) returns (TestResponse) {}
    rpc TestMethodStream (TestRequest) returns (stream TestResponse) {}
    rpc TestMethodClientStream (stream TestRequest) returns (TestResponse) {}
    rpc TestMethodBidi (stream TestRequest) returns (stream TestResponse) {}
}
